--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/adicionarCliente.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/adicionarCliente.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 template="template.xhtml"
-        >
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="pageTitle">
         Clientes
