migrando para java8 e colocando omnifaces

--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/adicionarOrcamento.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/adicionarOrcamento.xhtml
@@ -129,7 +129,7 @@
                         </tr>
                         <tr>
                             <td>Dentista</td>
-                            <td><h:selectOneMenu value="#{orcamentoController.orcamentoSelecionado.dentista}" converter="usuarioConverter">
+                            <td><h:selectOneMenu value="#{orcamentoController.orcamentoSelecionado.dentista}" converter="omnifaces.SelectItemsConverter">
                                     <f:selectItems var="dentista" value="#{orcamentoController.dentistas}" itemLabel="#{dentista.nome}" 
                                                    itemValue="#{dentista}" itemDescription="#{dentista.nome}"/>
                                 </h:selectOneMenu> 
