--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/menu.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/menu.xhtml
@@ -1,17 +1,19 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        >
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ul>
         <li>
             <a href="usuarios.faces">Usuários (#{loginController.quantidadeUsuarios})</a>
         </li>
         <li>
-            <a href="servicos.faces">Serviços (#{loginController.quantidadeServicos})</a>
+            <a href="categoriasDeImagem.faces">Categorias de imagem (#{categoriaImagemController.quantidadeDeCategoriasDeImagem})</a>
         </li>
         <li>
             <a href="clientes.faces">Clientes (#{clienteController.quantidadeClientes})</a>
+        </li>
+        <li>
+            <a href="servicos.faces">Serviços (#{loginController.quantidadeServicos})</a>
         </li>
     </ul>    
 </ui:composition>
