--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/template.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/template.xhtml
@@ -9,11 +9,12 @@
         <h:outputStylesheet name="/css/default.css"/>
         <h:outputStylesheet name="/css/cssLayout.css"/>
         <title>COEE7 - <ui:insert name="pageTitle"/></title>
-        <h:outputScript library="js" name="jquery-2.2.2.min.js"/>
     </h:head>
 
     <h:body>
-
+        <ui:insert name="jQueryLib">
+            <h:outputScript library="js" name="jquery-2.2.2.min.js"/>
+        </ui:insert>
         <div id="top">
             <ui:include src="../header.xhtml"/>
         </div>
