--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/menu.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/menu.xhtml
@@ -7,7 +7,7 @@
             <a href="usuarios.faces">Usuários (#{loginController.quantidadeUsuarios})</a>
         </li>
         <li>
-            <a href="categoriasDeImagem.faces">Categorias de imagem (#{categoriaImagemController.quantidadeDeCategoriasDeImagem})</a>
+            <a href="categoriasDeImagem.faces">Categorias (#{categoriaImagemController.quantidadeDeCategoriasDeImagem})</a>
         </li>
         <li>
             <a href="clientes.faces">Clientes (#{clienteController.quantidadeClientes})</a>
