--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/viewImagem.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/viewImagem.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
                 template="template.xhtml">
 
     <ui:define name="pageTitle">
@@ -22,7 +22,13 @@
     </ui:define>
 
     <ui:define name="content">
-
+        <h:selectOneMenu value="#{imagemController.categoriaImagemSelecionada}"
+                converter="omnifaces.SelectItemsConverter">
+            <f:selectItems value="#{imagemController.categoriasDeImagem}" var="item" itemLabel="#{item.descricao}"
+                           itemValue="#{item}"/>
+        </h:selectOneMenu>
+        &nbsp;
+        <h:commandButton value="Cadastrar imagem" action="#{imagemController.iniciarCadastroDeImagem}"/>
     </ui:define>
 
 </ui:composition>
