--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/template.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/template.xhtml
@@ -24,7 +24,7 @@
             </div>
             <div id="content" class="left_content">
                 <h:messages styleClass="msgErro"/>
-                <h:form id="form">
+                <h:form id="form" enctype="multipart/form-data">
                     <ui:insert name="content">Content</ui:insert>
                 </h:form>
             </div>
