Inicio dev galeria de imagem, part6

--- a/ConsultorioOdontologicoEE-war/src/main/webapp/pages/viewImagem.xhtml
+++ b/ConsultorioOdontologicoEE-war/src/main/webapp/pages/viewImagem.xhtml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
@@ -22,13 +23,97 @@
     </ui:define>
 
     <ui:define name="content">
+        <h:outputLabel value="Categoria : " style="color:black;"/>
         <h:selectOneMenu value="#{imagemController.categoriaImagemSelecionada}"
-                converter="omnifaces.SelectItemsConverter">
+                         converter="omnifaces.SelectItemsConverter">
             <f:selectItems value="#{imagemController.categoriasDeImagem}" var="item" itemLabel="#{item.descricao}"
                            itemValue="#{item}"/>
         </h:selectOneMenu>
         &nbsp;
-        <h:commandButton value="Cadastrar imagem" action="#{imagemController.iniciarCadastroDeImagem}"/>
+        <h:commandButton id="btnAddImage" value="Cadastrar imagem" action="#{imagemController.iniciarCadastroDeImagem}"/>
+
+        <input type="hidden" id="effect-switcher" value="fade"/>
+        <input type="hidden" id="theme-switcher" value="flick"/>
+        &nbsp;&nbsp;
+        <button type="button" id="slideshow-button">Slideshow</button>
+
+        <!-- The container for the list of example images -->
+        <div id="links"></div>
+        <!-- The dialog widget -->
+        <div id="blueimp-gallery-dialog" data-show="fade" data-hide="fade">
+            <!-- The Gallery widget  -->
+            <div class="blueimp-gallery blueimp-gallery-carousel blueimp-gallery-controls">
+                <div class="slides"></div>
+                <a class="prev">&lsaquo;</a>
+                <a class="next">&rsaquo;</a>
+                <a class="play-pause"></a>
+            </div>
+        </div>
+
+        <script>
+            $(function () {
+                'use strict';
+                // Load demo images from flickr:
+                $.ajax({
+                    // Flickr API is SSL only:
+                    // https://code.flickr.net/2014/04/30/flickr-api-going-ssl-only-on-june-27th-2014/
+                    url: 'http://http://localhost/ConsutorioOdontologicoEE-war/webresources/image/#{imagemController.orcamentoSelecionado.id}/#{imagemController.categoriaImagemSelecionada.id}/',
+                    data: {
+                        format: 'json',
+                        method: 'flickr.interestingness.getList',
+                        api_key: '7617adae70159d09ba78cfec73c13be3' // jshint ignore:line
+                    },
+                    dataType: 'json'
+                }).done(function (result) {
+                    var linksContainer = $('#links'),
+                            baseUrl;
+                    // Add the demo images as links with thumbnails to the page:
+                    $.each(result, function (index, photo) {
+                        baseUrl = 'http://localhost:8080/ConsultorioOdontologicoEE-war/ImagemServlet/id=';
+                        alert(photo);
+                        $('<a/>')
+                                .append($('<img>').prop('src', baseUrl + photo.id))
+                                .prop('href', baseUrl + photo.id)
+                                .prop('title', photo.descricao)
+                                .attr('data-dialog', '')
+                                .appendTo(linksContainer).append('</img>');
+                    });
+                });
+
+                // Initialize the theme switcher:
+                $('#theme-switcher').change(function () {
+                    var theme = $('#theme');
+                    theme.prop(
+                            'href',
+                            theme.prop('href').replace(
+                                    /[\w\-]+\/jquery-ui.css/,
+                                    $(this).val() + '/jquery-ui.css'
+                            )
+                    );
+                });
+
+                // Initialize the effect switcher:
+                $('#effect-switcher').change(function () {
+                    var value = $(this).val();
+                    $('#blueimp-gallery-dialog').data({
+                        show: value,
+                        hide: value
+                    });
+                });
+
+                // Initialize the slideshow button:
+                $('#slideshow-button')
+                        .button({icons: {primary: 'ui-icon-image'}})
+                        .on('click', function () {
+                            $('#blueimp-gallery-dialog .blueimp-gallery')
+                                    .data('startSlideshow', true);
+                            $('#links').children().first().click();
+                        });
+            });
+
+
+        </script>
+
     </ui:define>
 
 </ui:composition>
